--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.3",
     "@sanity/cli": "^2.13.1",
+    "@sanity/client": "^2.15.0",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
