--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@sanity/cli": "^2.13.1",
     "@sanity/client": "^2.15.0",
     "next": "11.0.1",
+    "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-player": "^2.9.0",
     "react-scroll": "^1.8.3",
     "swiper": "^6.8.0"
   },
