--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.3",
+    "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/cli": "^2.13.1",
     "@sanity/client": "^2.15.0",
     "next": "11.0.1",
